# edk2_parser

./: .cspell.json  Cargo.toml  index.html
.github/: dependabot.yml
.github/workflows/: benchmark-workflow.yml  ci-workflow.yml
benches/: benchmark_inf_parse.rs
dev/bench/: data.js
src/: condition.rs  config.rs  err.rs  error.rs  inf.rs  lib.rs  parser.rs  section.rs
src/section/: mod.rs
src/section/common/: mod.rs  name_expression.rs  name_only.rs  pcds.rs
src/section/specific/: binaries.rs  buildoptions.rs  defines.rs  depex.rs  guids.rs  libraryclasses.rs  mod.rs  patchpcd.rs  sources.rs
tests/: test_dsc.rs  test_inf.rs  test_parse_edk2.rs
tests/data/: PrmPkg.dsc  ResetRuntimeDxe.inf  baseLib.inf  opensslLib.inf
