[package]
name = "uefi-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "edk2_parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = {version = "3.0.3", features = ["indexmap"]}
anyhow = "1.0.75"
regex = "1.10.2"
log = "0.4.20"
indexmap = "^2.1.0"

[dev-dependencies]
env_logger = "0.10.1"
