[package]
name = "uefi-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "edk2_parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark_inf_parse"
harness = false

[dependencies]
configparser = {version = "3.0.3", features = ["indexmap"]}
anyhow = "1.0.75"
regex = "1.10.2"
log = "0.4.20"
indexmap = "^2.1.0"
thiserror = "1.0.50"
serde = {version = "1.0.193", features = ["derive"]}
rmp-serde = "1.1.2"


[dev-dependencies]
env_logger = "0.10.1"
criterion = "0.5.1"
