[package]
name = "uefi-parser"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
debug = false
lto = true

[lib]
name = "edk2_parser"
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark_inf_parse"
harness = false

[dependencies]
configparser = {version = "3.0.3", features = ["indexmap"]}
regex = "1.10.2"
log = "0.4.20"
indexmap = "^2.1.0"
thiserror = "1.0.50"
rusqlite = "0.30.0"

[dev-dependencies]
env_logger = "0.10.1"
criterion = "0.5.1"
git2 = "0.18.1"
glob = "0.3.1"
